# C-Project---Pok-mon-Game

./: README.md
SupPoke Game/: ShortCuts.txt  main.c  struct.h
SupPoke_Game/SupPoke_Game/SupPoke Game/: CMakeLists.txt  main.c  save_player.txt  save_supemon.txt
SupPoke_Game/SupPoke_Game/SupPoke Game/Doc/: Documentation utilisateur  ShortCuts.txt  Soutenance Module C.pptx  TODO  documentation technique
SupPoke_Game/SupPoke_Game/SupPoke Game/include/: dommage.h  fight.h  game.h  save.h  shop.h  struct.h  supcenter.h  supinit.h
SupPoke_Game/SupPoke_Game/SupPoke Game/src/: dommage.c  fight.c  game.c  save.c  shop.c  supcenter.c  supinit.c
